<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="search">Поиск</string>
    <string name="subtitle">[subtitle]</string>
    <string name="description">[description]</string>
    <string name="staticmaptitle">[staticmaptitle]</string>
    <string name="contentDescription" />
    <string name="drawer_title">Navigation</string>
    <string name="crashMessage">Программа остановлена, отчет об ошибке отправлен автоматически</string>
    <string name="app_name">PetFoodAudit</string>
    <string name="create_document">Новый отчёт</string>
    <string name="remove_all_documents">Удалить все отчеты</string>
    <string name="save_document">Сохранить</string>
    <string name="edit_document">Изменить</string>
    <string name="take_picture">Добавить фото</string>
    <string name="settings">Настройки</string>
    <string name="about_app">О программе</string>
    <string name="check_update">Проверить обновление</string>
    <string name="export_data">Выгрузить отчёт в файл</string>
    <string name="export_data_email">Отправить отчет по почте</string>
    <string name="filter">Использовать фильтр</string>
    <string name="filter_date_from">с</string>
    <string name="filter_date_to">по</string>
    <string name="date">[date]</string>
    <string name="empty_list">Нет записей</string>
    <string name="stub">[stub]</string>
    <string name="start_period">Начало периода</string>
    <string name="end_period">Конец периода</string>
    <string name="item_label">[item_label]</string>
    <string name="picture_processing">Обработка изображения</string>
    <string name="title">[title]</string>
    <string name="value">[value]</string>
    <string name="store_id">Идентификатор</string>
    <string name="store_name">Наименование</string>
    <string name="store_address">Адрес</string>
    <string name="city">Город</string>
    <string name="cluster">Кластер</string>
    <string name="crash_toast_text">Программа остановлена, отчет об ошибке отправлен автоматически</string>

    <string-array name="clusters">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="document_list">
        <item>Отчет</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="document_id">[id]</string>
    <string name="document_date">[date]</string>

    <!-- Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
    <string name="document_description">[description]</string>
    <string name="address">[address]</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="message1">Show report?</string>
    <string name="message2">No application available to view report. Install application (Internet connection required)?</string>
    <string name="message3">Close program?</string>
    <string name="message4">Close document?</string>
    <string name="tasks">Задачи</string>
    <string name="responsible">Ответственный</string>
    <string name="limitation">Сроки</string>
    <string name="all_tasks_completed">Выполнены все показатели</string>
    <string name="channel">Канал продаж</string>
    <string name="subchannel">Субканал продаж</string>
    <string name="point_type">Тип точки</string>
    <string name="zero">[0]</string>
    <string name="product">[product]</string>

</resources>