<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/tasks">
        <EditTextPreference android:title="@string/tasks" />
        <EditTextPreference android:title="@string/responsible" />
        <EditTextPreference android:title="@string/limitation" />

        <CheckBoxPreference android:title="@string/all_tasks_completed"  />
    </PreferenceCategory>
    <PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory>
    </PreferenceCategory>

</PreferenceScreen>