<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/export"
        android:showAsAction="never"
        android:title="@string/export_data"/>
    <item
        android:id="@+id/export_email"
        android:showAsAction="never"
        android:title="@string/export_data_email"/>
    <!--
          <item
        android:id="@+id/settings"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/check_update"
        android:showAsAction="never"
        android:title="@string/check_update"/>
    -->
    <item
        android:id="@+id/drop_db"
        android:showAsAction="never"
        android:title="Удалить базу данных"/>
    <item
        android:id="@+id/about"
        android:showAsAction="never"
        android:title="@string/about_app"/>

</menu>