<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/tasks"
        android:textColor="@color/selected_caption1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/selected_caption1"
        android:textSize="16sp" >

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/responsible"
        android:textColor="@color/selected_caption1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/selected_caption1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/limitation"
        android:textColor="@color/selected_caption1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/selected_caption1"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/all_tasks_completed"
        android:textColor="@color/selected_caption1" />

</LinearLayout>